crates/carta/tests/snapshots/golden_writer__rtf__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 see [@knuth1984] for details\par}
