crates/carta/tests/snapshots/golden_writer__rtf__common__cluster-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 Clusters measure one glyph wide: \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? \u55357 ?\u56424 ?\u8205 ?\u55357 ?\u56425 ?\u8205 ?\u55357 ?\u56423 ? and the wide glyphs \u19968 ?\u20108 ?\u19977 ? take two columns each, while \u769 ?abc opens a word with a mark.\par}
