crates/carta/tests/snapshots/golden_writer__rtf__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 {\f1  x }\par}
{\pard \ql \f0 \sa180 \li0 \fi0 {\f1  }\par}
{\pard \ql \f0 \sa180 \li0 \fi0 {\f1 `x}\par}
